--- a/rodent-control-services.html
+++ b/rodent-control-services.html
@@ -31,7 +31,7 @@
   <!-- Hreflang -->
   
   <!-- Favicons -->
-  <link rel="icon" type="image/png" href="assets/img/favicons/favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/webp" href="assets/img/titan-pest-control-logo.webp" sizes="96x96">
   <link rel="icon" type="image/svg+xml" href="assets/img/favicons/favicon.svg">
   <link rel="shortcut icon" href="assets/img/favicons/favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
@@ -77,7 +77,7 @@
   <div class="th-menu-area text-center">
     <button class="th-menu-toggle" aria-label="Close Menu"><i class="fal fa-times"></i></button>
     <div class="mobile-logo">
-      <a href="index.htm"><img src="assets/img/titan-pest-control-logo.jpeg" alt="Titan Pest Control Logo" loading="lazy"></a>
+      <a href="index.htm"><img src="assets/img/titan-pest-control-logo.webp" alt="Titan Pest Control Logo" loading="lazy"></a>
     </div>
     <nav class="th-mobile-menu" aria-label="Mobile Navigation">
       <!-- (same nav as you shared) -->
@@ -95,36 +95,28 @@
                 <li><a href="mosquito-control-services.html">Mosquito Control Services</a></li>
                 <li><a href="bedbug-control-services.html">BedBug Control Services</a></li>
                 <li><a href="termite-control-services-hyderabad.html">Termite Control Service</a></li>
-                <li><a href="bird-control.html">Bird Control Service</a></li>
-                <li><a href="disinfection-services.html">Disinfection Service</a></li>
                 <li><a href="anti-termite-reticulation-system.html">Anti Termite Reticulation Service</a></li>
               </ul>
             </li>
             <li class="menu-item-has-children">
               <a href="#">Location Wise Services</a>
               <ul class="sub-menu">
-                <li><a href="pest-control-chandanagar.html">Chandanagar</a></li>
-                <li><a href="pest-control-balnagar.html">Balanagar</a></li>
-                <li><a href="pest-control-jubilee-hills.html">Jubilee Hills</a></li>
-                <li><a href="pest-control-lbnagar.html">LB Nagar</a></li>
-                <li><a href="pest-control-kondapur.html">Kondapur</a></li>
-                <li><a href="pest-control-madhapur.html">Madhapur</a></li>
-                <li><a href="pest-control-kukatpally.html">Kukatpally</a></li>
-                <li><a href="pest-control-gachibowli.html">Gachibowli</a></li>
-                <li><a href="pest-control-kphb.html">KPHB</a></li>
-                <li><a href="pest-control-hitech-city.html">Hi-Tech City</a></li>
-                <li><a href="pest-control-jeedimetla.html">Jeedimetla</a></li>
+                <li><a href="pest-control-service-chandanagar.html">Chandanagar</a></li>
+                <li><a href="pest-control-service-balnagar.html">Balanagar</a></li>
+                <li><a href="pest-control-service-jubilee-hills.html">Jubilee Hills</a></li>
+                <li><a href="pest-control-service-lbnagar.html">LB Nagar</a></li>
+                <li><a href="pest-control-service-kondapur.html">Kondapur</a></li>
+                <li><a href="pest-control-service-madhapur.html">Madhapur</a></li>
+                <li><a href="pest-control-service-kukatpally.html">Kukatpally</a></li>
+                <li><a href="pest-control-service-gachibowli.html">Gachibowli</a></li>
+                <li><a href="pest-control-service-kphb.html">KPHB</a></li>
+                <li><a href="pest-control-service-hitech-city.html">Hi-Tech City</a></li>
+                <li><a href="pest-control-service-jeedimetla.html">Jeedimetla</a></li>
               </ul>
             </li>
           </ul>
         </li>
-        <li class="menu-item-has-children">
-          <a href="#">Resources</a>
-          <ul class="sub-menu">
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="guides/index.htm">Guides</a></li>
-          </ul>
-        </li>
+        <li><a href="blog.html">Blog</a></li>
         <li><a href="https://Titanpestcontrol.com/job-post">Career</a></li>
         <li><a href="https://Titanpestcontrol.com/contact">Contact</a></li>
       </ul>
@@ -139,13 +131,13 @@
         <div class="row align-items-start justify-content-between">
           <div class="col-auto d-none d-lg-block">
             <div class="header-logo">
-              <a href="index.htm"><img src="assets/img/titan-pest-control-logo.jpeg" style="height: 4rem;" alt="Titan Pest Control Logo" loading="lazy"></a>
+              <a href="index.htm"><img src="assets/img/titan-pest-control-logo.webp" style="height: 4rem;" alt="Titan Pest Control Logo" loading="lazy"></a>
             </div>
           </div>
           <div class="col">
             <div class="menu-wrap">
               <div class="header-logo d-block d-lg-none">
-                <a href="index.htm"><img src="assets/img/titan-pest-control-logo.jpeg" alt="Titan Pest Control" loading="lazy"></a>
+                <a href="index.htm"><img src="assets/img/titan-pest-control-logo.webp" alt="Titan Pest Control" loading="lazy"></a>
               </div>
               <nav class="main-menu d-none d-lg-inline-block" role="navigation" aria-label="Primary Navigation">
                 <!-- desktop nav exactly same as yours -->
@@ -163,8 +155,6 @@
                           <li><a href="mosquito-control-services.html">Mosquito Control Services</a></li>
                           <li><a href="bedbug-control-services.html">BedBug Control Services</a></li>
                           <li><a href="termite-control-services-hyderabad.html">Termite Control Service</a></li>
-                          <li><a href="bird-control.html">Bird Control Service</a></li>
-                          <li><a href="disinfection-services.html">Disinfection Service</a></li>
                           <li><a href="anti-termite-reticulation-system.html">Anti Termite Reticulation Service</a></li>
                         </ul>
                       </li>
@@ -349,7 +339,7 @@
             <div class="overlay" style="position:absolute;inset:0;background:rgba(0,0,0,.5);z-index:1;border-radius:14px;"></div>
             <div class="widget-banner" style="position:relative;z-index:2;">
               <h3 class="box-title style2">Need Fast Rodent Removal?</h3>
-              <div class="logo style2"><img src="assets/img/titan-pest-control-logo.jpeg" alt="Titan Pest Control Logo"></div>
+              <div class="logo style2"><img src="assets/img/titan-pest-control-logo.webp" alt="Titan Pest Control Logo"></div>
               <p class="box-text style2">Same-Day Service Available</p>
               <h3 class="box-link"><a href="tel:+919666665400">+91 9666665400</a></h3>
               <a href="/contact" class="th-btn style2">Get a Free Quote <i class="far fa-arrow-right ms-2"></i></a>
@@ -402,7 +392,7 @@
           <div class="widget footer-widget">
             <div class="th-widget-about">
               <div class="about-logo">
-                <a href="index.htm"><img src="assets/img/titan-pest-control-logo.jpeg" alt="Titan Pest Control Logo Footer" style="height: 4rem;"></a>
+                <a href="index.htm"><img src="assets/img/titan-pest-control-logo.webp" alt="Titan Pest Control Logo Footer" style="height: 4rem;"></a>
               </div>
               <p class="about-text">
                 Titan Pest Control leads in eco-friendly pest solutions, safeguarding homes and businesses across India with expert care.
@@ -448,8 +438,6 @@
                 <li><a href="mosquito-control-services.html">Mosquito Control</a></li>
                 <li><a href="bedbug-control-services.html">Bed Bug Control</a></li>
                 <li><a href="termite-control-services-hyderabad.html">Termite Control</a></li>
-                <li><a href="bird-control.html">Bird Control</a></li>
-                <li><a href="disinfection-services.html">Disinfection Service</a></li>
                 <li><a href="anti-termite-reticulation-system.html">Anti Termite Reticulation</a></li>
               </ul>
             </div>
@@ -529,4 +517,5 @@
 
 </body>
 </html>
+
 
