--- a/rodent-control-services.html
+++ b/rodent-control-services.html
@@ -229,7 +229,7 @@
             <img src="assets/img/service/rodent-control.jpg" alt="Professional Rodent Control and Rat Extermination Service in Hyderabad" loading="lazy">
           </div>
           <div class="page-content">
-            <h2 class="h3 sec-title page-title">Professional Rat & Rodent Control – Safe, Effective & Guaranteed</h2>
+            <h2 class="h3 sec-title page-title">Expert Rat & Rodent Control with Safe & Guaranteed Solutions</h2>
             <p>
               Rodents like rats and mice cause serious health risks and property damage. They chew wires, contaminate food,
               spread diseases like leptospirosis and hantavirus, and multiply rapidly. 
@@ -517,5 +517,6 @@
 
 </body>
 </html>
+
 
 
