--- a/rodent-control-services.html
+++ b/rodent-control-services.html
@@ -231,22 +231,24 @@
           <div class="page-content">
             <h2 class="h3 sec-title page-title">Expert Rat & Rodent Control with Safe & Guaranteed Solutions</h2>
             <p>
-              Rodents like rats and mice cause serious health risks and property damage. They chew wires, contaminate food,
-              spread diseases like leptospirosis and hantavirus, and multiply rapidly. 
-              DIY methods often fail because rodents are intelligent, cautious, and adapt to traps quickly. 
-              Titan Pest Control offers <strong>scientific rodent control in Hyderabad</strong>, ensuring fast elimination and long-term prevention.
+              Rodents such as rats and mice pose serious health risks and can cause extensive property damage.
+              They chew electrical wires, contaminate food supplies, and spread dangerous diseases like leptospirosis and hantavirus.
+              Due to their intelligence, cautious behavior, and ability to adapt quickly, DIY rodent control methods often provide only temporary relief.
+              Titan Pest Control offers scientific and professional rodent control services in Hyderabad, 
+              designed to ensure rapid elimination and long-term prevention. 
+              Our expert technicians use proven techniques to target rodent activity at the source, 
+              helping protect your home or business from recurring infestations.
             </p>
 
-            <h3 class="mt-40 mb-4">Why Choose Titan Rodent Control?</h3>
+            <h3 class="mt-40 mb-4">Why Choose Titan Pest Control for Rodent Control?</h3>
             <ul>
               <li><strong>Same-Day Service:</strong> Emergency rodent removal available across Hyderabad.</li>
               <li><strong>Certified Experts:</strong> Trained technicians with years of experience in rodent management.</li>
               <li><strong>Safe for Family & Pets:</strong> Use of secure bait stations and eco-friendly products.</li>
-              <li><strong>30-Day Guarantee:</strong> Free follow-up if rodents reappear within 30 days.</li>
               <li><strong>Commercial & Residential:</strong> Tailored rodent control solutions for homes, shops, offices, warehouses & factories.</li>
             </ul>
 
-            <h3 class="mt-40 mb-4">Our Rodent Control Methods</h3>
+            <h3 class="mt-40 mb-4">Our Professional Rodent Control Methods</h3>
             <ol>
               <li><strong>Inspection:</strong> Identify nesting areas, burrows, food sources, and entry points.</li>
               <li><strong>Sticky Pads:</strong> Safe glue boards placed in strategic spots inside rodent boxes.</li>
@@ -263,12 +265,6 @@
               <li>Grease marks or tracks along walls and floors.</li>
               <li>Unpleasant ammonia-like smell in closed areas.</li>
             </ul>
-
-            <h3 class="mt-40 mb-4">Service Coverage – Hyderabad</h3>
-            <p>
-              Our rodent control teams cover all areas of Hyderabad, Gurugram, Noida, Faridabad, Ghaziabad, and Greater Noida. 
-              We also provide services for residential apartments, restaurants, hotels, warehouses, hospitals, and retail outlets.
-            </p>
 
             <h3 class="mt-40 mb-4">Book a Free Inspection Today</h3>
             <p>
@@ -288,31 +284,38 @@
               <div class="accordion-card">
                 <div class="accordion-header" id="faq-item-1">
                   <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse-1" aria-expanded="true">
-                    What are the risks of rodent infestations?
+                   How long does rodent control treatment take to show results?
                   </button>
                 </div>
                 <div id="faqCollapse-1" class="accordion-collapse collapse show">
-                  <div class="accordion-body">Rodents spread diseases, contaminate food, chew wires (fire risk), and cause structural damage if left untreated.</div>
+                  <div class="accordion-body">
+                    Rodent control treatments usually show results within a few days, depending on the level of infestation.
+                    Titan Pest Control uses strategic trapping and baiting methods to eliminate rodents quickly and effectively.
+                  </div>
                 </div>
               </div>
               <div class="accordion-card">
                 <div class="accordion-header" id="faq-item-2">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse-2">
-                    How soon will results be visible?
+                    Is rodent control safe for children and pets?
                   </button>
                 </div>
                 <div id="faqCollapse-2" class="accordion-collapse collapse">
-                  <div class="accordion-body">In most cases, rodent activity reduces significantly within 3–7 days of treatment. Follow-up visits ensure complete elimination.</div>
+                  <div class="accordion-body">Yes. We use secure bait stations and safe control methods that minimize exposure to children and pets.
+                    Our trained technicians ensure all treatments are applied responsibly with proper safety measures.
+                  </div>
                 </div>
               </div>
               <div class="accordion-card">
                 <div class="accordion-header" id="faq-item-3">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse-3">
-                    Do you provide long-term prevention?
+                    Can rodents return after the treatment?
                   </button>
                 </div>
                 <div id="faqCollapse-3" class="accordion-collapse collapse">
-                  <div class="accordion-body">Yes. Along with treatment, we provide rodent proofing guidance and offer AMC contracts for ongoing monitoring & control.</div>
+                  <div class="accordion-body">Without proper prevention, rodents can return.
+                    Our rodent control service includes entry-point sealing advice and preventive
+                    measures to reduce the risk of re-infestation and ensure long-term protection.</div>
                 </div>
               </div>
             </div>
@@ -517,6 +520,7 @@
 
 </body>
 </html>
+
 
 
 
