--- a/mosquito-control-services.html
+++ b/mosquito-control-services.html
@@ -57,7 +57,7 @@
   
   <!-- JSON-LD (page-provided) -->
   <script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","url":"https://titanpestcontrol.com/","name":"Titan Pest Control","potentialAction":{"@type":"SearchAction","target":"https://titanpestcontrol.com/search?q={query}","query-input":"required name=query"}}</script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","name":"Professional Mosquito Control Services","serviceType":"Mosquito Control","areaServed":["Hyderabad","Noida","Gurgaon","Faridabad","Ghaziabad","Hyderabad"],"provider":{"@type":"LocalBusiness","name":"Titan Pest Control","priceRange":"₹₹","image":"https://titanpestcontrol.com/assets/img/titan-pest-control-logo.jpeg","telephone":"+91-9316666656","address":{"@type":"PostalAddress","streetAddress":"22 Ground Floor, Front Side, Okhla Rd","addressLocality":"Sarai Jullena","addressRegion":"Hyderabad","postalCode":"110025","addressCountry":"IN"},"geo":{"@type":"GeoCoordinates","latitude":"28.5598801","longitude":"77.2710773"}},"description":"Comprehensive mosquito management with ULV/thermal fogging, residual spraying, larviciding and source reduction for dengue, malaria & chikungunya prevention.","offers":{"@type":"Offer","priceCurrency":"INR","price":"999.00"}}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","name":"Professional Mosquito Control Services","serviceType":"Mosquito Control","areaServed":["Hyderabad","Noida","Gurgaon","Faridabad","Ghaziabad","Hyderabad"],"provider":{"@type":"LocalBusiness","name":"Titan Pest Control","priceRange":"₹₹","image":"https://titanpestcontrol.com/assets/img/titan-pest-control-logo.webp","telephone":"+91-9316666656","address":{"@type":"PostalAddress","streetAddress":"22 Ground Floor, Front Side, Okhla Rd","addressLocality":"Sarai Jullena","addressRegion":"Hyderabad","postalCode":"110025","addressCountry":"IN"},"geo":{"@type":"GeoCoordinates","latitude":"28.5598801","longitude":"77.2710773"}},"description":"Comprehensive mosquito management with ULV/thermal fogging, residual spraying, larviciding and source reduction for dengue, malaria & chikungunya prevention.","offers":{"@type":"Offer","priceCurrency":"INR","price":"999.00"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How effective is the service?","acceptedAnswer":{"@type":"Answer","text":"We combine fogging (adult knockdown), residual spray (resting surfaces) and larviciding (breeding sites). Noticeable reduction typically within 24–48 hours; full control needs breeding-site management."}},{"@type":"Question","name":"How long does it last & how often to repeat?","acceptedAnswer":{"@type":"Answer","text":"A treatment generally lasts 2–4 weeks depending on weather and site conditions. Peak season (Jul–Oct): monthly or fortnightly; off-season: quarterly or as needed."}},{"@type":"Question","name":"Is it safe for kids, pets & plants?","acceptedAnswer":{"@type":"Answer","text":"Yes—government-approved formulations applied by trained technicians. Follow short re-entry guidance after fogging/spray (typically 1–2 hours)."}}]}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://titanpestcontrol.com/"},{"@type":"ListItem","position":2,"name":"Mosquito Control Services","item":"https://titanpestcontrol.com/mosquito-control-services"}]}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://titanpestcontrol.com/"},{"@type":"ListItem","position":2,"name":"Mosquito Control Services","item":"https://titanpestcontrol.com/mosquito-control-services"}]}</script>
@@ -78,7 +78,7 @@
   <div class="th-menu-area text-center">
     <button class="th-menu-toggle" aria-label="Close Menu"><i class="fal fa-times"></i></button>
     <div class="mobile-logo">
-      <a href="index.htm"><img src="assets/img/titan-pest-control-logo.jpeg" alt="Titan Pest Control Logo" loading="lazy"></a>
+      <a href="index.htm"><img src="assets/img/titan-pest-control-logo.webp" alt="Titan Pest Control Logo" loading="lazy"></a>
     </div>
     <nav class="th-mobile-menu" aria-label="Mobile Navigation">
       <!-- (same nav as you shared) -->
@@ -141,13 +141,13 @@
         <div class="row align-items-start justify-content-between">
           <div class="col-auto d-none d-lg-block">
             <div class="header-logo">
-              <a href="index.htm"><img src="assets/img/titan-pest-control-logo.jpeg" style="height: 4rem;" alt="Titan Pest Control Logo" loading="lazy"></a>
+              <a href="index.htm"><img src="assets/img/titan-pest-control-logo.webp" style="height: 4rem;" alt="Titan Pest Control Logo" loading="lazy"></a>
             </div>
           </div>
           <div class="col">
             <div class="menu-wrap">
               <div class="header-logo d-block d-lg-none">
-                <a href="index.htm"><img src="assets/img/titan-pest-control-logo.jpeg" alt="Titan Pest Control" loading="lazy"></a>
+                <a href="index.htm"><img src="assets/img/titan-pest-control-logo.webp" alt="Titan Pest Control" loading="lazy"></a>
               </div>
               <nav class="main-menu d-none d-lg-inline-block" role="navigation" aria-label="Primary Navigation">
                 <!-- desktop nav exactly same as yours -->
@@ -341,7 +341,7 @@ Content
             <div class="overlay" style="position:absolute;inset:0;background:rgba(0,0,0,.5);border-radius:14px;"></div>
             <div class="widget-banner" style="position:relative;z-index:2;">
               <h3 class="box-title style2">Need Mosquito Control in Hyderabad?</h3>
-              <div class="logo style2"><img src="assets/img/titan-pest-control-logo.jpeg" alt="Titan Pest Control Logo"></div>
+              <div class="logo style2"><img src="assets/img/titan-pest-control-logo.webp" alt="Titan Pest Control Logo"></div>
               <p class="box-text style2">Call for Quick Support</p>
               <h3 class="box-link"><a href="tel:+919666665400">+91 9666665400</a></h3>
               <a href="/contact" class="th-btn style2">Get a Free Quote <i class="far fa-arrow-right ms-2"></i></a>
@@ -394,7 +394,7 @@ Content
           <div class="widget footer-widget">
             <div class="th-widget-about">
               <div class="about-logo">
-                <a href="index.htm"><img src="assets/img/titan-pest-control-logo.jpeg" alt="Titan Pest Control Logo Footer" style="height: 4rem;"></a>
+                <a href="index.htm"><img src="assets/img/titan-pest-control-logo.webp" alt="Titan Pest Control Logo Footer" style="height: 4rem;"></a>
               </div>
               <p class="about-text">
                 Titan Pest Control leads in eco-friendly pest solutions, safeguarding homes and businesses across India with expert care.
@@ -521,3 +521,4 @@ Content
 
 </body>
 </html>
+
