--- a/mosquito-control-services.html
+++ b/mosquito-control-services.html
@@ -245,11 +245,13 @@ Content
             </div>
 
             <p>
-              Beat monsoon spikes & year-round <strong>mosquito</strong> nuisance with Titan. We cut adult populations fast,
-              kill larvae at source, and build a protective barrier—safe, compliant, and result-driven across Hyderabad.
+              Beat monsoon mosquito surges and year-round mosquito problems with Titan Pest Control.
+              Our advanced mosquito control solutions rapidly reduce adult mosquito populations, eliminate larvae at breeding sites,
+              and create a long-lasting protective barrier around your property. Using safe, government-approved,
+              and compliant treatments, we deliver effective, result-driven mosquito control across Hyderabad for homes and businesses.
             </p>
 
-            <h3 class="mt-4 mb-2">Treatment Methods</h3>
+            <h3 class="mt-4 mb-2">Our Treatment Methods</h3>
             <ul>
               <li><strong>Fogging (ULV/Thermal):</strong> Rapid knockdown of active adults in outdoor/common areas.</li>
               <li><strong>Residual Spraying:</strong> Resting surfaces (walls, vegetation, shaded spots) for ongoing protection.</li>
@@ -271,41 +273,41 @@ Content
               <li><strong>Follow-up:</strong> Monitoring & seasonal scheduling (AMC).</li>
             </ol>
 
-            <h3 class="mt-4 mb-2">Pricing</h3>
-            <ul>
-              <li><strong>Residential:</strong> from <strong>₹999</strong> (area & method based)</li>
-              <li><strong>Societies/Commercial:</strong> inspection-based quote (per sqft/zone)</li>
-            </ul>
-
             <div class="d-flex flex-wrap gap-2 mb-4">
               <a class="th-btn rounded-12 style3" href="/contact">Book Free Inspection <i class="fas fa-arrow-right ms-2"></i></a>
               <a class="th-btn rounded-12" href="tel:+919666665400">Call +91 9666665400 <i class="fas fa-phone ms-2"></i></a>
             </div>
 
-            <h3 class="mt-4 mb-2">FAQs</h3>
+            <h3 class="mt-4 mb-2">Frequently Asked Questions – Mosquito Control Service</h3>
             <div class="accordion" id="faqAccordion">
               <div class="accordion-card">
                 <div class="accordion-header" id="q1">
-                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#c1" aria-expanded="true">Does fogging eliminate all mosquitoes?</button>
+                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#c1" aria-expanded="true">How effective is mosquito control during the monsoon season?</button>
                 </div>
                 <div id="c1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
-                  <div class="accordion-body">It kills adults present during service. Long-term control needs larviciding + source reduction.</div>
+                  <div class="accordion-body">Mosquito control is highly effective during the monsoon when done professionally.
+                    Titan Pest Control uses targeted treatments to reduce adult mosquitoes and eliminate larvae at breeding sources,
+                    helping control mosquito populations even during peak rainy seasons in Hyderabad.
+                  </div>
                 </div>
               </div>
               <div class="accordion-card">
                 <div class="accordion-header" id="q2">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#c2">How often should we treat?</button>
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#c2">Is mosquito control treatment safe for children, pets, and plants?</button>
                 </div>
                 <div id="c2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-                  <div class="accordion-body">Peak season: fortnightly/monthly. Otherwise: quarterly or as activity demands; AMCs ensure continuity.</div>
+                  <div class="accordion-body">Yes. We use government-approved, eco-friendly 
+                    mosquito control solutions that are safe for children, pets, and plants when applied correctly.
+                    Our technicians follow strict safety guidelines to ensure minimal disruption.</div>
                 </div>
               </div>
               <div class="accordion-card">
                 <div class="accordion-header" id="q3">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#c3">Is it safe for kids & pets?</button>
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#c3">How often should mosquito control treatment be done?</button>
                 </div>
                 <div id="c3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-                  <div class="accordion-body">Yes—use of approved formulations with brief re-entry guidance (typically 1–2 hours post service).</div>
+                  <div class="accordion-body">For best results, mosquito control is recommended every 3–4 weeks, especially during monsoon and summer months.
+                    Regular treatments help maintain a protective barrier and prevent mosquito breeding around your property.</div>
                 </div>
               </div>
             </div>
@@ -513,6 +515,7 @@ Content
 
 </body>
 </html>
+
 
 
 
