--- a/bedbug-control-services.html
+++ b/bedbug-control-services.html
@@ -31,7 +31,7 @@
   <!-- Hreflang -->
   
   <!-- Favicons -->
-  <link rel="icon" type="image/png" href="assets/img/favicons/favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/webp" href="assets/img/titan-pest-control-logo.webp" sizes="96x96">
   <link rel="icon" type="image/svg+xml" href="assets/img/favicons/favicon.svg">
   <link rel="shortcut icon" href="assets/img/favicons/favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
@@ -57,7 +57,7 @@
   
   <!-- JSON-LD (page-provided) -->
   <script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","url":"https://titanpestcontrol.com/","name":"Titan Pest Control","potentialAction":{"@type":"SearchAction","target":"https://titanpestcontrol.com/search?q={query}","query-input":"required name=query"}}</script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","name":"Bed Bug Control (Hyderabad)","serviceType":"Bed Bug Extermination","description":"Inspection-led, multi-visit bed bug control program targeting eggs, nymphs and adults. Discreet service and clear guidance for safe re-entry.","provider":{"@type":"LocalBusiness","name":"Titan Pest Control","url":"https://titanpestcontrol.com","image":"https://titanpestcontrol.com/assets/img/logo1.png","telephone":"+91-9666665400","address":{"@type":"PostalAddress","streetAddress":"22 Ground Floor, Front Side, Okhla Rd, Sarai Jullena","addressLocality":"New Hyderabad","addressRegion":"Hyderabad","postalCode":"110025","addressCountry":"IN"}},"areaServed":["Hyderabad","New Hyderabad","Noida","Gurugram","Faridabad","Ghaziabad","Hyderabad"],"offers":{"@type":"Offer","priceCurrency":"INR","price":"1500","category":"starting","availability":"https://schema.org/InStock"},"url":"https://titanpestcontrol.com/bedbug-control-services"}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","name":"Bed Bug Control (Hyderabad)","serviceType":"Bed Bug Extermination","description":"Inspection-led, multi-visit bed bug control program targeting eggs, nymphs and adults. Discreet service and clear guidance for safe re-entry.","provider":{"@type":"LocalBusiness","name":"Titan Pest Control","url":"https://titanpestcontrol.com","image":"https://titanpestcontrol.com/assets/img/logo.webp","telephone":"+91-9666665400","address":{"@type":"PostalAddress","streetAddress":"22 Ground Floor, Front Side, Okhla Rd, Sarai Jullena","addressLocality":"New Hyderabad","addressRegion":"Hyderabad","postalCode":"110025","addressCountry":"IN"}},"areaServed":["Hyderabad","New Hyderabad","Noida","Gurugram","Faridabad","Ghaziabad","Hyderabad"],"offers":{"@type":"Offer","priceCurrency":"INR","price":"1500","category":"starting","availability":"https://schema.org/InStock"},"url":"https://titanpestcontrol.com/bedbug-control-services"}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I know if I have bed bugs?","acceptedAnswer":{"@type":"Answer","text":"Look for itchy bites in lines or clusters, tiny dark fecal spots on sheets and skirtings, shed skins, a musty odor and apple-seed sized reddish-brown insects hiding in mattress seams, headboards and furniture joints."}},{"@type":"Question","name":"How many treatments are needed?","acceptedAnswer":{"@type":"Answer","text":"Most infestations need 2–3 visits spaced 10–14 days apart to break the lifecycle. Severe or multi-room cases may require an additional follow-up."}},{"@type":"Question","name":"Are your bed bug treatments safe?","acceptedAnswer":{"@type":"Answer","text":"Yes. We use government-approved products and provide clear prep and re-entry guidance. We also deploy steam and heat in suitable cases to reduce overall chemical load."}}]}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"HowTo","name":"How to Prepare a Room for Bed Bug Treatment","step":[{"@type":"HowToStep","name":"Declutter","text":"Bag loose items near beds/sofas and keep sealed to prevent transfer."},{"@type":"HowToStep","name":"Launder on High Heat","text":"Wash and dry bedding/clothes on high heat and store in sealed bags."},{"@type":"HowToStep","name":"Pull Bed from Wall","text":"Leave a 6–8 inch gap and remove bed-skirts touching the floor."},{"@type":"HowToStep","name":"Vacuum Thoroughly","text":"Vacuum seams, skirtings and cracks; discard the bag immediately."},{"@type":"HowToStep","name":"Observe Re-Entry","text":"Re-enter only after advised dry time and avoid mopping treated skirtings for 7 days."}]}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://titanpestcontrol.com/"},{"@type":"ListItem","position":2,"name":"Our Services","item":"https://titanpestcontrol.com/service"},{"@type":"ListItem","position":3,"name":"Bed Bug Control (Hyderabad)","item":"https://titanpestcontrol.com/bedbug-control-services"}]}</script>
@@ -78,7 +78,7 @@
   <div class="th-menu-area text-center">
     <button class="th-menu-toggle" aria-label="Close Menu"><i class="fal fa-times"></i></button>
     <div class="mobile-logo">
-      <a href="index.htm"><img src="assets/img/titan-pest-control-logo.jpeg" alt="Titan Pest Control Logo" loading="lazy"></a>
+      <a href="index.htm"><img src="assets/img/titan-pest-control-logo.webp" alt="Titan Pest Control Logo" loading="lazy"></a>
     </div>
     <nav class="th-mobile-menu" aria-label="Mobile Navigation">
       <!-- (same nav as you shared) -->
@@ -140,13 +140,13 @@
         <div class="row align-items-start justify-content-between">
           <div class="col-auto d-none d-lg-block">
             <div class="header-logo">
-              <a href="index.htm"><img src="assets/img/titan-pest-control-logo.jpeg" style="height: 4rem;" alt="Titan Pest Control Logo" loading="lazy"></a>
+              <a href="index.htm"><img src="assets/img/titan-pest-control-logo.webp" style="height: 4rem;" alt="Titan Pest Control Logo" loading="lazy"></a>
             </div>
           </div>
           <div class="col">
             <div class="menu-wrap">
               <div class="header-logo d-block d-lg-none">
-                <a href="index.htm"><img src="assets/img/titan-pest-control-logo.jpeg" alt="Titan Pest Control" loading="lazy"></a>
+                <a href="index.htm"><img src="assets/img/titan-pest-control-logo.webp" alt="Titan Pest Control" loading="lazy"></a>
               </div>
               <nav class="main-menu d-none d-lg-inline-block" role="navigation" aria-label="Primary Navigation">
                 <!-- desktop nav exactly same as yours -->
@@ -414,7 +414,7 @@
             <div class="overlay" style="position:absolute;inset:0;background:rgba(0,0,0,.5);z-index:1;border-radius:14px;"></div>
             <div class="widget-banner" style="position:relative;z-index:2;">
               <h3 class="box-title style2">Need Help? We’re Here</h3>
-              <div class="logo style2"><img src="assets/img/titan-pest-control-logo.jpeg" alt="Titan Pest Control Logo"></div>
+              <div class="logo style2"><img src="assets/img/titan-pest-control-logo.webp" alt="Titan Pest Control Logo"></div>
               <p class="box-text style2">Get online support</p>
               <h3 class="box-link"><a href="tel:+919666665400">+91 9666665400</a></h3>
               <a href="/contact" class="th-btn style2">Get a Quote <i class="far fa-arrow-right ms-2"></i></a>
@@ -467,7 +467,7 @@
           <div class="widget footer-widget">
             <div class="th-widget-about">
               <div class="about-logo">
-                <a href="index.htm"><img src="assets/img/titan-pest-control-logo.jpeg" alt="Titan Pest Control Logo Footer" style="height: 4rem;"></a>
+                <a href="index.htm"><img src="assets/img/titan-pest-control-logo.webp" alt="Titan Pest Control Logo Footer" style="height: 4rem;"></a>
               </div>
               <p class="about-text">
                 Titan Pest Control leads in eco-friendly pest solutions, safeguarding homes and businesses across India with expert care.
@@ -594,5 +594,6 @@
 
 </body>
 </html>
+
 
 
